Header overlap corrected in all pages

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -76,6 +76,9 @@
 	#spacing {
     height: 118px;
   }
+	#spacing1 {
+    height: 120px;
+  }
 	.header-login {
 		float: none;
 		margin-top: 15px;
